--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,10 @@
     color: black;
     font-size: 20px;
 }
+.time-ticker {
+    padding: 1px;
+    text-align: center;
+    background: rgb(60, 219, 211);
+    color: black;
+    font-size: 20px;
+}
